log
Wed 10 May 2023 06:57:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘mont’ [-Werror=unused-variable]
   36 |   Heap *mont = (Heap*)malloc(sizeof(Heap));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
eeff082
Wed 10 May 2023 06:57:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
25421a9
